Problem_1/3-tier-GCP-architechture-code/kubernetes/lets-encrypt/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - $dns
    secretName: frontend-tls
  rules:
  - host: $dns
    http:
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: front-end-service
              port:
                number: 80
